
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________



2019 DEC 27b
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Se(), changed the electron energy source term back to to 19dec18a version 


2019 DEC 27a
  * in model/fluid/_*_plasma/fluid_bdry.c
    - in update_bdry_wall(), added a clipping to ensure that the electron temperature at the wall
      never falls below the wall temperature
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Se(), changed the electron energy source term to E dot Je for testing 
       

2019 DEC 24a
  * in bin/thermal_sheath.wrp
    - added clipping of Te within Cycle() module in the early stages of convergence
  * renamed model/chem/_Air_Plasma_12s_59r_Dunn-Kang-Macheret to 
    model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret
  * in model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret/chem.c
    - got rid of redundant reactions
  * in model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret
    - added doc
    

2019 DEC 18a
  * in cycle/*/cycle.c
    - in runtime_actions_cycle_specific(), added gl->PRECONDITIONER!=PRECON_LOCALTIMESTEP2
  * in cycle/share/cycle_share.c
    - in add_constants_to_codex(), added PRECON_LOCALTIMESTEP2
    - added find_Delta_Lambda_for_dtau_local()
    - in find_dtau(), renamed find_Delta_Lambda_for_dtau() for find_Delta_Lambda_for_dtau_local()
  * in model/share/fluid_share.c
    - in find_Gamma(), added PRECON_LOCALTIMESTEP2
  * in bin/thermal_sheath.wrp
    - made modifications -> now can use CFL of 1 till Mach 25 when a sheath exists (the CFL used
      to be restricted to 0.01 or less when the Mach number was more than 16 and a sheath was 
      present)
      

2019 DEC 09a
  * in src/data.c
    - in find_interpolation_weight(), made changes to how thisweight is computed (now