@@ -148,7 +148,7 @@ void find_post_variable_name_fluid(long varnum, char *varname){
     case nd+ns+3:   sprintf(varname,"a");         break;
     case nd+ns+4:   sprintf(varname,"eta");        break;
     case nd+ns+5:  sprintf(varname,"gamma");     break;
-//    case nd+ns+6:  sprintf(varname,"Ptest");     break;
+    case nd+ns+6:  sprintf(varname,"kappa");     break;
   }
 }
 
@@ -180,7 +180,7 @@ void find_post_variable_value_fluid(np_t *np, long l, gl_t *gl,
       case nd+ns+3:   *varvalue=_a(np[l],gl);      break;
       case nd+ns+4:   *varvalue=_eta(np[l],gl);    break;
       case nd+ns+5:   *varvalue=_gamma(np[l],gl);  break;
-//      case nd+ns+6:   *varvalue=Ptest;      break;
+      case nd+ns+6:   *varvalue=_kappa(np[l],gl);      break;
     }
   }
 }
